--- a/examples/webgl_loader_obj2_options.html
+++ b/examples/webgl_loader_obj2_options.html
@@ -40,7 +40,9 @@
 		<div id="glFullscreen">
 			<canvas id="example"></canvas>
 		</div>
-		<div id="dat" class="dg ac"></div>
+		<div id="dat">
+
+		</div>
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - OBJLoader2 usage options<br>Use module workers with Chromium based browser (80+)
 			<div id="feedback"></div>
@@ -61,6 +63,8 @@
 			import { OBJLoader2 } from "./jsm/loaders/OBJLoader2.js";
 			import { OBJLoader2Parallel } from "./jsm/loaders/OBJLoader2Parallel.js";
 			import { LoadedMeshUserOverride } from "./jsm/loaders/obj2/shared/MeshReceiver.js";
+
+			import { TaskManager } from "./jsm/taskmanager/TaskManager.js";
 
 			const WWOBJLoader2Example = function ( elementToBindTo ) {
 
@@ -90,6 +94,7 @@
 				this.cube = null;
 				this.pivot = null;
 
+				this.taskManager = new TaskManager( 2 );
 			};
 
 			WWOBJLoader2Example.prototype = {
@@ -199,6 +204,7 @@
 					};
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
+//						.setTaskManager( this.taskManager )
 						.setModelName( modelName )
 						.setJsmWorker( this.useJsmWorker, new URL( OBJLoader2Parallel.DEFAULT_JSM_WORKER_PATH, window.location.href ) )
 						.setCallbackOnLoad( callbackOnLoad )
@@ -265,6 +271,7 @@
 					this.pivot.add( local );
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
+//						.setTaskManager( this.taskManager )
 						.setModelName( modelName )
 						.setJsmWorker( this.useJsmWorker, new URL( OBJLoader2Parallel.DEFAULT_JSM_WORKER_PATH, window.location.href ) );
 
@@ -299,6 +306,7 @@
 					this.pivot.add( local );
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
+//						.setTaskManager( this.taskManager )
 						.setModelName( local.name )
 						.setExecuteParallel( false );
 
@@ -323,12 +331,13 @@
 					this.pivot.add( local );
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
+//						.setTaskManager( this.taskManager )
 						.setModelName( local.name )
 						.setJsmWorker( this.useJsmWorker, new URL( OBJLoader2Parallel.DEFAULT_JSM_WORKER_PATH, window.location.href ) )
 						.setBaseObject3d( local );
 
 					// Configure WorkerExecutionSupport to not disregard worker after execution
-					objLoader2Parallel.getWorkerExecutionSupport().setTerminateWorkerOnLoad( false );
+					objLoader2Parallel.setTerminateWorkerOnLoad( false );
 
 					function callbackMeshAlter( event ) {
 
