--- a/examples/webgl_loader_taskmanager.html
+++ b/examples/webgl_loader_taskmanager.html
@@ -266,7 +266,7 @@
 					}
 					if ( awaiting.length > 0 ) {
 
-						return Promise.all( awaiting );
+						return await Promise.all( awaiting );
 
 					}
 					else {
@@ -348,6 +348,7 @@
 
 								case 'material':
 									this.materialHandler.addPayloadMaterials( payload );
+									break;
 
 								case 'void':
 									break;
