--- a/examples/webgl_loader_workertaskmanager.html
+++ b/examples/webgl_loader_workertaskmanager.html
@@ -5,24 +5,15 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
-		<style>
-			#dat {
-				user-select: none;
-				position: absolute;
-				left: 0;
-				top: 0;
-				z-Index: 200;
-			}
-		</style>
 	</head>
 
 	<body>
 		<canvas id="example" style="width: 100%; height: 100vh;"></canvas>
 		<div id="info">
-			<a href="http://threejs.org" target="_blank" rel="noopener">three.js</a> - WorkerTaskManager prototype
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - WorkerTaskManager prototype
 			<div id="feedback" style="color: darkorange"></div>
 		</div>
-		<div id="dat" />
+		<div id="dat" style="user-select: none; position: absolute; left: 0; top: 0; z-Index: 200;"></div>
 
 		<script type="module">
 
@@ -727,7 +718,7 @@
 			tmControls.controls[ index ].onChange( value => { app.taskDescriptions.get( taskName5 ).use = value; } );
 
 			index++;
-			tmControls.controls[ index ] = gui.add( tmControls, 'maxParallelExecutions', 1, 16 ).step( 1 ).name( 'Maximum Parallel Executions' );
+			tmControls.controls[ index ] = gui.add( tmControls, 'maxParallelExecutions', 1, 32 ).step( 1 ).name( 'Maximum Parallel Executions' );
 			tmControls.controls[ index ].onChange( value => { app.workerTaskManager.setMaxParallelExecutions( value ) } );
 
 			index++;
